<resources>
    <string name="app_name">Aplikasi Data Film</string>
    <string name="anggota_kel1">5200411024 - Grace Syalomita Tompunuh</string>
    <string name="anggota_kel2">5200411029 - Aris Fitriyadi</string>
    <string name="anggota_kel3">5200411410 - Fikriansyah Azidan</string>
    <string name="anggota_kel4"> 5200411411 - Findyka Ayuningtyas</string>
    <string name="anggota_kel5">5200411449 - Rafi Aji Pangestu</string>
    <string name="anggota_kel6">5200411542 - Layati</string>
</resources>